[package]
name = "cupp_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = "3.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
csv = "1.1"
flate2 = "1.0"

[[bin]]
edition = "2021"
name = "cupp_rs"
path = "src/main.rs"